# performance-tests

./: Dockerfile.compose-example  Dockerfile.example  api_client_get_documents.py  api_client_get_user.py  api_client_issue_physical_card.py  api_client_make_top_up_operation.py  docker-compose.example.yaml  greeting_pb2.py  greeting_pb2_grpc.py  grpc_client.py  grpc_server.py  grpcio_get_documents.py  grpcio_get_operation_receipt.py  grpcio_get_user.py  grpcio_issue_physical_card.py  grpcio_make_purchase_operation.py  grpcio_open_debit_card_account.py  httpx_client.py  httpx_get_documents.py  httpx_get_operation_receipt.py  httpx_get_user.py  httpx_issue_virtual_card.py  httpx_make_top_up_operation.py  httpx_open_deposit_account.py  main.py  pydantic_basics.py  pydantic_create_user.py  pyproject.toml
clients/http/: client.py
clients/http/gateway/accounts/: client.py  schema.py
clients/http/gateway/cards/: client.py  schema.py
clients/http/gateway/documents/: client.py  schema.py
clients/http/gateway/operations/: client.py  schema.py
clients/http/gateway/users/: client.py  schema.py
tools/: fakers.py
