[project]
name = "performance-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100", # Missing docstring in public module
    "D103", # Missing docstring in public function
    "T201", # `print` found
    "D400", # First line should end with a period
    "D415", # First line should end with a period, question mark, or exclamation point
]
