[project]
name = "performance-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # `incorrect-blank-line-before-class`
    "D211", # `no-blank-line-before-class`
    "D212", # `multi-line-summary-first-line`
    "D213", # `multi-line-summary-second-line`
    "D100", # Missing docstring in public module
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in `__init__`
    "ANN204", # Missing return type annotation for special method `__init__`
    "T201", # `print` found
    "D400", # First line should end with a period
    "D415", # First line should end with a period, question mark, or exclamation point
    "RUF002", "RUF003", # Comment contains ambiguous `с`
]
